--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <title>Worship Songs</title>
-    <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
+    <link href="./index.css" type="text/css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css" integrity="sha384-tmaXBGDXDylqHmGdj38lMQk2xeYhgDuaYTcFdBofHNPMW1C+rCYIy85wiTmfMQ4J" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css" integrity="sha384-Wh4i8JDLuRrfisLuCOOPRvvOenkPdgXL9ZEBJkvidYFs9ym6gGOkVhU5LkVGEnN5" crossorigin="anonymous">
   </head>
   <body>
     <div id="root">
