Set OpenGraph meta tags

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,24 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+
+    <!-- Primary Meta Tags -->
     <title>Worship Songs</title>
+    <meta name="title" content="Worship Songs" />
+    <meta name="description" content="A digital index of Songs for Praise and Worship" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://songs.lousando.xyz/" />
+    <meta property="og:title" content="Worship Songs" />
+    <meta property="og:description" content="A digital index of Songs for Praise and Worship" />
+
+    <!-- X (Twitter) -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://songs.lousando.xyz/" />
+    <meta property="twitter:title" content="Worship Songs" />
+    <meta property="twitter:description" content="A digital index of Songs for Praise and Worship" />
+
     <link href="./index.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css" integrity="sha384-tmaXBGDXDylqHmGdj38lMQk2xeYhgDuaYTcFdBofHNPMW1C+rCYIy85wiTmfMQ4J" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css" integrity="sha384-Wh4i8JDLuRrfisLuCOOPRvvOenkPdgXL9ZEBJkvidYFs9ym6gGOkVhU5LkVGEnN5" crossorigin="anonymous">
