--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,10 @@
 
     <!-- Primary Meta Tags -->
     <title>Worship Songs</title>
+    <link
+        rel="icon"
+        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎵</text></svg>"
+    />
     <meta name="title" content="Worship Songs" />
     <meta name="description" content="A digital index of Songs for Praise and Worship" />
 
